<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityMain2ID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="370dp"
       android:id="@+id/egusiImage"
       android:layout_below="@+id/toolbar2"/>

    <TextView
        android:id="@+id/Ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@+id/egusiImage"
        android:layout_marginStart="12dp"
        />



    <ScrollView
        android:id="@+id/ingredient_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Ingredients"
        android:layout_alignParentBottom="true"
        android:fillViewport="true"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/ingredient_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/ingredient_list"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/method_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_prepare"
                android:layout_below="@+id/ingredient_list"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="25dp"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/ButtonColor"
                android:textColor="@color/black"
                />


        </RelativeLayout>

    </ScrollView>







</RelativeLayout>